// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Checkbox 1`] = `
<div
  className="dp-input--checkbox test-class"
  style={Object {}}
>
  <input
    checked={false}
    disabled={false}
    id="id1"
    onChange={[Function]}
    type="checkbox"
    value="test"
  />
  <label
    className="dp-input--checkbox__checkbox"
    htmlFor="id1"
  />
  <label
    className="dp-input__label"
    htmlFor="id1"
  >
    
  </label>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of ColorPicker 1`] = `
<div
  className="dp-colorpicker test-class"
>
  <div
    className="dp-colorpicker--swatch"
    onClick={[Function]}
  >
    <div
      className="dp-colorpicker--swatch--color"
      style={
        Object {
          "background": "test",
        }
      }
    />
  </div>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of CustomSelect 1`] = `
<div
  className="dp-select test-class"
>
  <div
    className="dp-select__input"
    onClick={[Function]}
  >
    12 countries
    <span
      className="dp-select__arrow"
    />
  </div>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Datepicker 1`] = `
<div
  className="dp-datepicker test-class"
  style={Object {}}
>
  <div
    className="dp-input dp-input--with-icon--right"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-calendar fa-w-14 fa-sm dp-icon"
      data-icon="calendar"
      data-prefix="fas"
      onClick={[Function]}
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <input
      id="id2"
      name="date1"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="DD/MM/YYYY"
      value="01/01/2018"
    />
  </div>
  <div />
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Datetimepicker 1`] = `
<div
  className="dp-datepicker test-class"
  style={Object {}}
>
  <div
    className="dp-input dp-input--with-icon--right"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-calendar fa-w-14 fa-sm dp-icon"
      data-icon="calendar"
      data-prefix="fas"
      onClick={[Function]}
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 192h424c6.6 0 12 5.4 12 12v260c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V204c0-6.6 5.4-12 12-12zm436-44v-36c0-26.5-21.5-48-48-48h-48V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H160V12c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v52H48C21.5 64 0 85.5 0 112v36c0 6.6 5.4 12 12 12h424c6.6 0 12-5.4 12-12z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <input
      id="id3"
      name="date2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="DD/MM/YYYY HH:MM"
      value="01/01/2018 12:34"
    />
  </div>
  <div />
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Form 1`] = `
<form
  className="dp-form test-class"
  onSubmit={[Function]}
>
  <input
    name="input1"
  />
</form>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Group 1`] = `
<div
  className="dp-form-group test-class"
>
  <label
    className="dp-input__label"
    htmlFor=""
  >
    Test
    
  </label>
  
  <input
    name="input1"
  />
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of HiddenFields 1`] = `
<div
  className="dp-hidden-fields dp-hidden-fields--open test-class"
>
  <div
    aria-expanded={true}
    className="dp-hidden-fields__body"
    id="dp-hidden-fields-body-4"
  >
    <input
      name="input1"
    />
  </div>
  <button
    aria-controls="dp-hidden-fields-body-4"
    aria-label="Click to close."
    className="dp-hidden-fields__label"
    onClick={[Function]}
    style={Object {}}
  >
    Test Hide
  </button>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Input 1`] = `
<div
  className="dp-input test-class"
>
  <input
    id="id5"
    name="input1"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="test"
  />
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Label 1`] = `
<label
  className="test-class"
  htmlFor=""
>
  Test
  
</label>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Radio 1`] = `
<div
  className="dp-input--radio test-class"
  style={Object {}}
>
  <label
    htmlFor="id6"
  >
    <input
      disabled={false}
      id="id6"
      name="radio1"
      onChange={[Function]}
      type="radio"
      value="test"
    />
    <i />
    <label
      className="dp-input__label"
      htmlFor="id6"
    >
      
      
    </label>
  </label>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of SearchButton 1`] = `
<div
  className="dp-search-button test-class"
>
  <button
    className="dp-button dp-button--l dp-button--primary dp-button--shape-default dp-button--square"
    disabled={false}
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-plus fa-w-14 fa-sm dp-icon"
      data-icon="plus"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <div />
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of SearchInline 1`] = `
<div
  className="dp-search-inline test-class"
>
  <div
    className="dp-input dp-input--with-icon"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 fa-sm dp-icon"
      data-icon="search"
      data-prefix="fas"
      onClick={[Function]}
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    <input
      id="id9"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
  </div>
  <ul
    className="dp-list"
  >
    
  </ul>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of SearchSelect 1`] = `
<div
  className="dp-search-select test-class"
>
  <div
    className="dp-select"
  >
    <div
      className="Select dp-select is-clearable is-searchable Select--single"
    >
      <div
        className="Select-control"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="Select-multi-value-wrapper"
          id="react-select-2--value"
        >
          <div
            className="Select-placeholder"
          >
            Please select
          </div>
          <div
            className="Select-input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-activedescendant="react-select-2--value"
              aria-expanded="false"
              aria-haspopup="false"
              aria-owns=""
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              role="combobox"
              style={
                Object {
                  "boxSizing": "content-box",
                  "width": "5px",
                }
              }
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
        <span
          className="Select-arrow-zone"
          onMouseDown={[Function]}
        >
          <span
            className="Select-arrow"
            onMouseDown={[Function]}
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of SearchSubmit 1`] = `
<div
  className="dp-search-submit test-class"
>
  <div
    className="dp-input"
  >
    <input
      id="id11"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    />
  </div>
  <button
    className="dp-button dp-button--l dp-button--primary dp-button--shape-default dp-button--square"
    disabled={false}
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 fa-sm dp-icon"
      data-icon="search"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <div />
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Select 1`] = `
<div
  className="dp-select test-class"
>
  <div
    className="Select dp-select test-class is-clearable is-searchable Select--single"
  >
    <div
      className="Select-control"
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="Select-multi-value-wrapper"
        id="react-select-3--value"
      >
        <div
          className="Select-placeholder"
        >
          Please select
        </div>
        <div
          className="Select-input"
          style={
            Object {
              "display": "inline-block",
            }
          }
        >
          <input
            aria-activedescendant="react-select-3--value"
            aria-expanded="false"
            aria-haspopup="false"
            aria-owns=""
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            role="combobox"
            style={
              Object {
                "boxSizing": "content-box",
                "width": "5px",
              }
            }
            value=""
          />
          <div
            style={
              Object {
                "height": 0,
                "left": 0,
                "overflow": "scroll",
                "position": "absolute",
                "top": 0,
                "visibility": "hidden",
                "whiteSpace": "pre",
              }
            }
          >
            
          </div>
        </div>
      </div>
      <span
        className="Select-arrow-zone"
        onMouseDown={[Function]}
      >
        <span
          className="Select-arrow"
          onMouseDown={[Function]}
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Tag 1`] = `
<span
  className="dp-tag test-class editable"
>
  Test
  <span
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 fa-sm dp-icon dp-tag__close"
      data-icon="times"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </span>
</span>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of TagInput 1`] = `
<div
  className="dp-tag-input editable"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="test-class"
    onClick={[Function]}
  >
    <span>
      <span
        className="dp-tag editable"
      >
        test1
        <span
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 fa-sm dp-icon dp-tag__close"
            data-icon="times"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
      <span
        className="dp-tag editable"
      >
        test2
        <span
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times fa-w-11 fa-sm dp-icon dp-tag__close"
            data-icon="times"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 352 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
      </span>
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-1"
        className="react-autosuggest__container"
        role="combobox"
      >
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls="react-autowhatever-1"
          autoComplete="off"
          className="react-tagsinput-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onPaste={[Function]}
          placeholder="Add a label"
          type="text"
          value=""
        />
        <div
          className="react-autosuggest__suggestions-container"
          id="react-autowhatever-1"
          role="listbox"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of TagSet 1`] = `
<div
  className="dp-tag-set"
>
  <span
    className="dp-tag editable"
  >
    test1
    <span
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 fa-sm dp-icon dp-tag__close"
        data-icon="times"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </span>
  <span
    className="dp-tag editable"
  >
    test2
    <span
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-11 fa-sm dp-icon dp-tag__close"
        data-icon="times"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 352 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </span>
  <div
    className="dp-search-button"
    onChange={[Function]}
    onKeyDown={[Function]}
  >
    <button
      className="dp-button dp-button--l dp-button--primary dp-button--shape-default dp-button--square"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-14 fa-sm dp-icon"
        data-icon="plus"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </button>
    <div />
  </div>
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Textarea 1`] = `
<div
  className="dp-textarea test-class"
>
  <textarea
    name="textarea1"
    onChange={[Function]}
    value="test"
  />
</div>
`;

exports[`>>> Forms --- Snapshot +++capturing Snapshot of Toggle 1`] = `
<div
  className="dp-input--toggle test-class"
>
  <input
    checked={false}
    className="hidden right"
    id={null}
    onChange={[Function]}
    type="checkbox"
    value="test"
  />
  <label
    htmlFor={null}
    onClick={[Function]}
  />
</div>
`;
